--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-plugin-standard": "^2.0.1",
     "expect": "^1.20.2",
     "jest": "^17.0.0",
+    "jsdom": "^9.8.3",
     "mocha": "^3.1.2",
     "react-addons-test-utils": "^15.3.2",
     "react-test-renderer": "^15.3.2",
