--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mocha": "^3.1.2",
     "react-addons-test-utils": "^15.3.2",
     "react-test-renderer": "^15.3.2",
+    "sinon": "^1.17.6",
     "webpack": "^1.13.3",
     "webpack-babel-jest": "^1.0.4",
     "webpack-dev-server": "^1.16.2"
@@ -53,6 +54,7 @@
     "collectCoverage": true
   },
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "test-watch": "jest --watch --verbose"
   }
 }
