Update jest unmocked module patterns

--- a/package.json
+++ b/package.json
@@ -46,7 +46,9 @@
     "unmockedModulePathPatterns": [
       "react",
       "react-dom",
-      "enzyme"
+      "enzyme",
+      "sinon",
+      "jsdom"
     ],
     "coverageDirectory": "./coverage/",
     "collectCoverage": true
