--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
     "axios": "^0.15.2",
     "classnames": "^2.2.5",
     "react": "^15.3.2",
-    "react-dom": "^15.3.2",
-    "react-router": "^3.0.0"
+    "react-dom": "^15.3.2"
   },
   "devDependencies": {
     "babel-core": "^6.18.2",
