--- a/package.json
+++ b/package.json
@@ -1,9 +1,15 @@
 {
   "name": "react-adminlte",
   "main": "src/index.js",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/falmar/react-adminlte"
+  },
+  "license": "SEE LICENSE IN LICENSE",
   "dependencies": {
     "axios": "^0.15.2",
     "classnames": "^2.2.5",
+    "jest": "^17.0.3",
     "react": "^15.3.2",
     "react-dom": "^15.3.2"
   },
@@ -22,11 +28,9 @@
     "eslint-plugin-promise": "^3.3.2",
     "eslint-plugin-react": "^6.6.0",
     "eslint-plugin-standard": "^2.0.1",
-    "jest": "^17.0.0",
-    "jsdom": "^9.8.3",
+    "jest": "^17.0.3",
     "react-addons-test-utils": "^15.3.2",
     "react-test-renderer": "^15.3.2",
-    "sinon": "^1.17.6",
     "webpack": "^1.13.3",
     "webpack-babel-jest": "^1.0.4",
     "webpack-dev-server": "^1.16.2"
