--- a/package.json
+++ b/package.json
@@ -60,5 +60,6 @@
     "prod": "NODE_ENV=production webpack --config webpack.config.js",
     "test": "jest",
     "test-watch": "jest --watch --verbose"
-  }
+  },
+  "version": "0.0.1-alpha"
 }
