--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-adm-lte",
-  "main": "src/index.js",
+  "main": "dist/react-adm-lte.js",
   "repository": {
     "type": "git",
     "url": "git://github.com/falmar/react-adm-lte"
@@ -51,9 +51,11 @@
     "collectCoverage": true
   },
   "scripts": {
-    "prod": "NODE_ENV=production webpack --config webpack.config.js",
+    "prod": "NODE_ENV=production webpack",
+    "dev": "NODE_ENV=development webpack",
+    "dev:watch": "NODE_ENV=development webpack --watch",
     "test": "jest",
-    "test-watch": "jest --watch --verbose"
+    "test:watch": "jest --watch --verbose"
   },
   "version": "0.0.2"
 }
