--- a/package.json
+++ b/package.json
@@ -22,10 +22,15 @@
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
     "enzyme": "^2.6.0",
+    "eslint": "^3.8.1",
+    "eslint-config-standard": "^6.2.1",
+    "eslint-config-standard-react": "^4.2.0",
+    "eslint-plugin-promise": "^3.4.0",
+    "eslint-plugin-react": "^6.9.0",
+    "eslint-plugin-standard": "^2.0.1",
     "jest": "^17.0.3",
     "react-addons-test-utils": "^15.3.2",
     "react-test-renderer": "^15.3.2",
-    "standard": "^8.6.0",
     "webpack": "^1.13.3",
     "webpack-babel-jest": "^1.0.4",
     "webpack-dev-server": "^1.16.2"
@@ -56,11 +61,6 @@
     "dev:watch": "NODE_ENV=development webpack --watch",
     "test": "jest",
     "test:watch": "jest --watch --verbose"
-  },
-  "standard": {
-    "env": {
-      "jest": true
-    }
   },
   "version": "0.0.3"
 }
