--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "prod": "NODE_ENV=production webpack",
     "dev": "NODE_ENV=development webpack",
     "dev:watch": "NODE_ENV=development webpack --watch",
-    "test": "jest",
+    "test": "eslint . && jest",
     "test:watch": "jest --watch --verbose"
   },
   "version": "0.0.3"
