--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,16 @@
 {
-  "presets": ["es2015", "react", "stage-0"],
-  "plugins": [
-    "transform-react-constant-elements",
-    "transform-react-inline-elements"
-  ]
+  "presets": [
+    ["env", {"modules": false}],
+    "react",
+    "stage-2"
+  ],
+  "env": {
+    "test": {
+      "plugins": ["transform-es2015-modules-commonjs"]
+    },
+    "production": [
+      "transform-react-constant-elements",
+      "transform-react-inline-elements"
+    ]
+  }
 }
