--- a/package.json
+++ b/package.json
@@ -7,20 +7,22 @@
   },
   "author": "David Lavieri <daviddlavier@gmail.com> (http://dlavieri.com)",
   "license": "SEE LICENSE IN LICENSE",
+  "peerDevependencies": {
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2"
+  },
   "dependencies": {
-    "classnames": "^2.2.5",
-    "react": "^15.3.2",
-    "react-dom": "^15.3.2"
+    "classnames": "^2.2.5"
   },
   "devDependencies": {
     "babel-core": "^6.18.2",
-    "babel-jest": "^17.0.0",
+    "babel-jest": "^19.0.0",
     "babel-loader": "^6.2.7",
     "babel-plugin-transform-react-constant-elements": "^6.9.1",
     "babel-plugin-transform-react-inline-elements": "^6.8.0",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.16.0",
-    "babel-preset-stage-0": "^6.16.0",
+    "babel-preset-env": "^1.2.1",
+    "babel-preset-react": "^6.23.0",
+    "babel-preset-stage-2": "^6.22.0",
     "enzyme": "^2.6.0",
     "eslint": "^3.8.1",
     "eslint-config-standard": "^6.2.1",
@@ -28,23 +30,18 @@
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-react": "^6.9.0",
     "eslint-plugin-standard": "^2.0.1",
-    "jest": "^17.0.3",
-    "react-addons-test-utils": "^15.3.2",
-    "react-test-renderer": "^15.3.2",
-    "webpack": "^1.13.3",
-    "webpack-babel-jest": "^1.0.4",
-    "webpack-dev-server": "^1.16.2"
+    "jest": "^19.0.2",
+    "react-addons-test-utils": "^15.4.2",
+    "react-test-renderer": "^15.4.2",
+    "webpack": "^2.2.1"
   },
   "jest": {
-    "transform": {
-      ".jsx?": "<rootDir>/node_modules/webpack-babel-jest"
-    },
     "moduleFileExtensions": [
       "js",
       "json",
       "es6"
     ],
-    "testPathDirs": [
+    "roots": [
       "<rootDir>/src/"
     ],
     "unmockedModulePathPatterns": [
@@ -56,10 +53,10 @@
     "collectCoverage": true
   },
   "scripts": {
-    "prod": "NODE_ENV=production webpack",
-    "dev": "NODE_ENV=development webpack",
+    "prod": "webpack -p --config webpack.config.dev.js",
+    "dev": "webpack --config webpack.config.dev.js",
     "dev:watch": "NODE_ENV=development webpack --watch",
-    "test": "eslint . && jest",
+    "test": "eslint src && jest",
     "test:watch": "jest --watch --verbose"
   },
   "version": "0.0.3"
