--- a/.babelrc
+++ b/.babelrc
@@ -8,9 +8,11 @@
     "test": {
       "plugins": ["transform-es2015-modules-commonjs"]
     },
-    "production": [
-      "transform-react-constant-elements",
-      "transform-react-inline-elements"
-    ]
+    "production": {
+      "plugins": [
+        "transform-react-constant-elements",
+        "transform-react-inline-elements"
+      ]
+    }
   }
 }
