Update exports and Dropdown props

--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
   },
   "scripts": {
     "dev": "webpack",
+    "dev:watch": "webpack --watch",
     "prod": "NODE_ENV=production webpack -p",
     "build": "npm run dev && npm run prod",
     "test": "eslint src && jest",
