--- a/package.json
+++ b/package.json
@@ -7,10 +7,6 @@
   },
   "author": "David Lavieri <daviddlavier@gmail.com> (http://dlavieri.com)",
   "license": "SEE LICENSE IN LICENSE",
-  "peerDevependencies": {
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2"
-  },
   "dependencies": {
     "classnames": "^2.2.5"
   },
@@ -23,7 +19,7 @@
     "babel-preset-env": "^1.2.1",
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-2": "^6.22.0",
-    "enzyme": "^2.6.0",
+    "enzyme": "^2.8.2",
     "eslint": "^3.8.1",
     "eslint-config-standard": "^7.0.1",
     "eslint-config-standard-react": "^4.3.0",
@@ -31,10 +27,10 @@
     "eslint-plugin-react": "^6.10.0",
     "eslint-plugin-standard": "^2.1.1",
     "jest": "^19.0.2",
-    "react": "^15.4.2",
-    "react-addons-test-utils": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "react-test-renderer": "^15.4.2",
+    "prop-types": "^15.5.8",
+    "react": "15.5.4",
+    "react-dom": "15.5.4",
+    "react-test-renderer": "15.5.4",
     "webpack": "^2.2.1"
   },
   "jest": {
